--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.devtools.restart.enabled=true
+spring.data.mongodb.database=IOJ
+spring.data.mongodb.uri=mongodb+srv://parascoding:password3019@cluster0.5jazlsy.mongodb.net/IOJ
