--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,3 +1,4 @@
 spring.devtools.restart.enabled=true
 spring.data.mongodb.database=IOJ
 spring.data.mongodb.uri=mongodb+srv://parascoding:password3019@cluster0.5jazlsy.mongodb.net/IOJ
+spring.http.multipart.enabled = true
