--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.devtools.restart.enabled=true
 spring.data.mongodb.database=IOJ
-spring.data.mongodb.uri=mongodb+srv://parascoding:password3019@cluster0.5jazlsy.mongodb.net/IOJ
-# spring.data.mongodb.uri=mongodb://localhost:27017/IOJ
+# spring.data.mongodb.uri=mongodb+srv://parascoding:password3019@cluster0.5jazlsy.mongodb.net/IOJ
+spring.data.mongodb.uri=mongodb://localhost:27017/IOJ
 spring.http.multipart.enabled = true
