Configured for railway deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.data.mongodb.database=IOJ
 spring.data.mongodb.uri=mongodb+srv://parascoding:password3019@cluster0.5jazlsy.mongodb.net/IOJ
 # spring.data.mongodb.uri=mongodb://localhost:27017/IOJ
 spring.http.multipart.enabled = true
-server.address=0.0.0.0
+# server.address=0.0.0.0
